# glass-box

./: .gitignore  CLAUDE.md  README.md  demo_branch_tree_10.json  demo_branch_tree_greedy.json  demo_launcher.py  entropy_branching.py  mock_input.ipynb  multibeam_search.ipynb  multibeam_search.py  pyproject.toml  reasoning_tree.py  requirements.txt  tree_editor.py
clinical-tree-ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json
clinical-tree-ui/docs/: ARCHITECTURE.md  STYLE_GUIDE.md
clinical-tree-ui/src/: App.tsx  OrthoApp.tsx  index.css  main.tsx
clinical-tree-ui/src/components/: AuditTrail.tsx  BaselineView.tsx
clinical-tree-ui/src/components/shared/: Icons.tsx
clinical-tree-ui/src/context/: TreeContext.tsx  treeReducer.ts
clinical-tree-ui/src/data/: buildAnimationSequence.ts  buildParallelAnimationSequence.ts  computeSynthesis.ts  mockTree.ts  orthopedicsTree.ts  transformer.ts
clinical-tree-ui/src/hooks/: useGrowthCamera.ts  useGrowthTimer.ts  useTreeKeyboard.ts  useViewportControl.ts
clinical-tree-ui/src/pages/: StyleVariantA.tsx  StyleVariantB.tsx  StyleVariantC.tsx  StyleVariantD.tsx  StyleVariantE.tsx  StyleVariantF.tsx  StyleVariantG.tsx
clinical-tree-ui/src/styles/: tokens.css
clinical-tree-ui/src/types/: tree.ts
slides/: export-video.js  package-lock.json  package.json  sketch-slide-0.js  sketch-slide-2.js  sketch-slide-3.js  sketch.js
slides/output/: sketch-run-clean.webm  sketch-run-regression.webm  sketch-run.webm  sketch-slide-2.webm  sketch-slide-3.webm
tests/: test_entropy_branching.py
(+20 files in other folders)
